force-app/main/default/objects/DistribuicaoVisita__c/DistribuicaoVisita__c.object-meta.xml
<CustomObject>
    <label>Distribuição de visita</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribuições de visita</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>