force-app/main/default/objects/DistribuicaoVisita__c/fields/PessoaFisica__c.field-meta.xml
<CustomField>
    <fullName>PessoaFisica__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Atende os Leads dos tipos:
Pessoa Física;
Pessoa Física RN; 
Médico cooperado;</inlineHelpText>
    <label>Pessoa Fisica</label>
    <type>Checkbox</type>
</CustomField>