force-app/main/default/objects/DistribuicaoVisita__c/fields/PessoaJuridica__c.field-meta.xml
<CustomField>
    <fullName>PessoaJuridica__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Atende os Leads Pessoa Jurídica conforme faixa de números de vidas que atende os portes:
PME2;
ME;
GC;
CE;</inlineHelpText>
    <label>Pessoa Jurídica</label>
    <type>Checkbox</type>
</CustomField>