force-app/main/default/objects/DistribuicaoVisita__c/fields/QuantidadeMembros__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeMembros__c</fullName>
    <label>Quantidade de Membros</label>
    <summaryForeignKey>MembroDistribuicaoVisita__c.DistribuicaoVisita__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>