force-app/main/default/objects/DistribuicaoVisita__c/fields/QuantidadeRegioes__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeRegioes__c</fullName>
    <label>Quantidade de Regiões</label>
    <summaryForeignKey>RegionalizacaoDistribuicaoVisita__c.DistribuicaoVisita__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>