force-app/main/default/objects/DistribuicaoVisita__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo de equipe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call center</fullName>
            </value>
            <value>
                <fullName>Consultores</fullName>
            </value>
            <value>
                <fullName>Equipe corporativa</fullName>
            </value>
            <value>
                <fullName>Loja autorizada</fullName>
            </value>
            <value>
                <fullName>Loja própria</fullName>
            </value>
            <value>
                <fullName>Promotores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>