force-app/main/default/objects/DistribuicaoVisita__c/validationRules/ValidaNumerosVida.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaNumerosVida</fullName>
    <active>true</active>
    <description>Insira um número válido.</description>
    <errorConditionFormula>OR(ISBLANK(NumeroVidas__c), NumeroVidas__c = 0)</errorConditionFormula>
    <errorDisplayField>NumeroVidas__c</errorDisplayField>
    <errorMessage>Insira um número válido.</errorMessage>
</ValidationRule>