force-app/main/default/objects/DistribuicaoVisita__c/listViews/PME1_e_Individual.listView-meta.xml
<ListView>
    <fullName>PME1_e_Individual</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Porte__c</field>
        <operation>contains</operation>
        <value>Individual</value>
    </filters>
    <label>PME1 e Individual</label>
</ListView>