force-app/main/default/objects/DistribuicaoVisita__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>Codigo__c</columns>
    <columns>NAME</columns>
    <columns>QuantidadeMembros__c</columns>
    <columns>QuantidadeRegioes__c</columns>
    <columns>NumeroVidas__c</columns>
    <columns>PessoaFisica__c</columns>
    <columns>PessoaJuridica__c</columns>
    <columns>Porte__c</columns>
    <columns>Tipo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>